Update environment file example

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,22 @@ HOST=localhost
 
 ## Database Configuration
 PGUSER=
-PGHOST=
+PGHOST=localhost
 PGPASSWORD=
 PGDATABASE=
-PGPORT=
+PGPORT=5432
 
 ## JWT Configuration
 ACCESS_TOKEN_KEY=
 REFRESH_TOKEN_KEY=
+
+## AWS Configuration
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_BUCKET_NAME=
+
+## RabbitMQ Configuration
+RABBITMQ_SERVER=amqp://localhost
+
+## Redis Configuration
+REDIS_SERVER=localhost
